src/test/ui/parser/duplicate-visibility.stderr
error: expected one of `(`, `fn`, `static`, or `type`, found keyword `pub`
  --> $DIR/duplicate-visibility.rs:3:9
   |
LL |     pub pub fn foo();
   |         ^^^ expected one of `(`, `fn`, `static`, or `type` here

error: aborting due to previous error

