src/test/ui/parser/duplicate-visibility.rs
// error-pattern: expected one of `(`, `async`, `const`, `extern`, `fn`
extern {
    pub pub fn foo();
}
